# siahl-telegram-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  alembic.ini  debug_scraper.py  docker-compose.yml  pyproject.toml  setup_github.sh  start_local.bat  start_local.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/: bot.py  config.py
src/database/: __init__.py  connection.py  models.py
src/handlers/: __init__.py  help.py  start.py  team_analytics.py
src/middleware/: __init__.py  database.py
src/services/scraper/: __init__.py  base_scraper.py  schedule_scraper.py  team_scraper.py
