[tool.poetry]
name = "siahl-telegram-bot"
version = "0.1.0"
description = "Telegram bot for SIAHL San Jose Amateur Hockey League with smart notifications, analytics, and AI features"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
aiogram = "^3.24.0"
aiohttp = "^3.12.0"
beautifulsoup4 = "^4.13.0"
lxml = "^6.0.2"
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
apscheduler = "^3.11.0"
pytz = "^2024.2"
matplotlib = "^3.10.0"
pillow = "^11.1.0"
anthropic = "^0.76.0"
python-dotenv = "^1.0.1"
pydantic = "^2.12.0"
pydantic-settings = "^2.8.0"
loguru = "^0.7.3"
sentry-sdk = "^2.20.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
aioresponses = "^0.7.8"
freezegun = "^1.5.1"
factory-boy = "^3.3.1"
ruff = "^0.9.3"
mypy = "^1.14.1"
black = "^25.1.0"
types-pytz = "^2024.2.0.20241209"

[tool.poetry.scripts]
bot = "src.bot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
